# watersentinel

./: .gitignore  Dockerfile  FINAL_VIDEO_SCRIPT.md  PRD.md  README.md  SYSTEM_PROMPT.md  TECHNICAL_SPEC.md  audit_all_filters.py  check_db_path.py  check_hyderabad_district_raw.py  cleanup_map_data.py  diagnose_colony_data.py  diagnose_telangana_issue.py  fix_city_state_by_pincode_prefix.py  fix_colony_data.py  fix_contaminant_format.py  fix_ingest.py  fix_pincode_area_name.py  fix_telangana_state.py  ingest.py  migrate_colony_name.py  migrate_source_type.py  pyproject.toml  seed_colony_variety.py  seed_pincode_master.py  seed_source_variety.py  test_agent_structure.py  test_agent_structure_patch.py  test_scoring_logic.py  test_single_agent.py  test_two_agent_handoff.py
agents/: __init__.py
agents/action_forge/: __init__.py  agent.py
agents/community_mapper/: __init__.py  agent.py
agents/orchestrator/: __init__.py  agent.py
agents/source_sense/: __init__.py  agent.py
agents/water_profiler/: __init__.py  agent.py  error_classifier.py  photo_analyzer.py  symptom_extractor.py  tools.py
api/: __init__.py  main.py
api/routers/: __init__.py  feedback.py  geolocation.py  (+5 more)
docs/: KAGGLE_WRITEUP.md  VIDEO_SCRIPT.md
mcp_servers/: __init__.py  action_bridge.py  contaminant_classifier.py  location_canonicalizer.py  water_intel_store.py
mobile_app/: App.tsx  app.json  package.json
rag/: ingest.py  query.py
scripts/: seed_mock_data.py  test_agents.py  test_mcp_servers.py
watersentinel_web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
(+26 files in other folders)
